# Estudo-de-Caso-Vibracao

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
app/: app.py
app/templates/: index.html
app/tools/: sensor.py
data/: Dados_1_testwebapp_classE.npy  Dados_2_testwebapp_classE.npy  Dados_3_testwebapp_classE.npy  Dados_4_testwebapp_classE.npy  Dados_5_testwebapp_classE.npy
data/processed_data/: label_test.npy  label_train.npy
modelo/: best_model.keras
modelo/scalers/: scaler_sensor_1.pkl  scaler_sensor_2.pkl  scaler_sensor_3.pkl  scaler_sensor_4.pkl  scaler_sensor_5.pkl
notebook/: processamento_dados.ipynb  treinamento_modelo.ipynb
templates/: index.html
tools/: sensor.py
