[project]
name = "estudo-de-caso-dadosfera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "python-multipart>=0.0.20",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.19.0",
    "uvicorn>=0.35.0",
    "watermark>=2.5.0",
]
